[package]
name = "cross-chain-swap"
description = "Cross-chain atomic swap contracts for NEAR"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.4.0", features = ["legacy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.0", features = ["derive"] }

[dev-dependencies]
near-sdk = { version = "5.4.0", features = ["unit-testing", "legacy"] }
near-workspaces = { version = "0.14.1", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true 