[package]
name = "merkle-storage-invalidator"
description = "Merkle Storage Invalidator contract for cross-chain atomic swap"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.15.1", features = ["legacy"] }
borsh = { version = "1.5.7", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
near-sdk = { version = "5.15.1", features = ["unit-testing", "legacy"] }
near-workspaces = { version = "0.14.1", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true 